tests/substructural/check/copy_of_affine_struct.err.expected
error: at 6:13: [SUB-CopyOfNonCopy] In function 'f', block 'entry': cannot copy non-Copy type D
   |
 6 |             b = copy a;
   |             ^^^^^^^^^^
  hint: since the type is not Copy, try moving it instead using 'move'
