tests/substructural/check/copy_of_affine_struct.sim

        struct D: Drop { x: i64 }
        fn f(a: D) {
            b: D;
            entry:
            b = copy a;
            return
        }
        